# Softrast

./: .gitignore  CMakeLists.txt
include/: camera.h  gmath.h  math.h  objParser.h  renderer.h
src/: main.cpp  objParser.cpp  renderer.cpp
